# reverie

./: .git-blame-ignore-revs  .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  tox.ini
.circleci/: config.yml
reverie/: __init__.py  image.py  main.py
reverie/6S/: in.txt  in_Py6S.txt  make.bash  out.txt  run_6s.py  run_viccal_6S.py  tidy_Py6s_output.py
reverie/6S/6sV2.1/: AKTOOL.f  Makefile  main(copy).f  main.f  mainjson.f  mainlutaero.f  sixsV2.1
reverie/ancillary/: get_ancillary.py
reverie/calibration/: vicarious.py
reverie/data/: ACOLITE-RSKY-202102-82W-MOD2.nc
reverie/image/: __init__.py  blender.py  pixel_extractor.py  revecube.py
reverie/lut/: zhang_rho.py
reverie/server/: 6s_server.py  gas_transmitance_lut_plot_server.py  rho_path_lut_plot_server.py  rho_sky_lut_plot_embedded.py  rho_sky_lut_plot_server.py  start_server.sh  vicarious_6s_server.py
reverie/utils/: astronomy.py  cf_aliases.py  create_stac.py  download_file.py  helper.py  reproject2.py  tile.py
reverie/workflow/: ac_run.py  compute_rho_sky.py  convert_L1.py  convert_acolite.py  export_rgb.py  extract_footprint.py  extract_pixel.py  extract_pixel_line.py  gas_transmitance_lut_plot_server.py  get_ancillary.py  gpkg_to_netcdf.py  l1_convert.py  output_rgb.py  pdf_split_color.py  rho_sky_comparison.ipynb  rho_sky_lut_plot_embedded.py  rho_sky_lut_plot_server.py  run_viccal_6S.py  sky_glint_test.py  to_zarr.py
tests/image/: test_revecube.py
tests/utils/: .~lock.NOAA_Solar_Calculations_day.ods#  NOAA_Solar_Calculations_day.ods  test_astronomy.py
(+162 files in other folders)
